--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
 
     <script src="js/zepto.min.js"></script>
     <script src="js/test.js"></script>
+    <script src="device.js"></script>
     <script>
+      var devUuid = device.uuid;
+      document.write(devUuid);
       $('#test').click(function() {
         TEST.PushMe($('#results'));
       });
