--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="js/zepto.min.js"></script>
     <script src="js/test.js"></script>
+    <script src="cordova.js"></script>
     <script src="device.js"></script>
     <script>
       $('#test').click(function() {
