new config location

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       $('#clear').click(function() {
         $('#results').html('');
       });
+
+      var devCordova = device.cordova;
+      var devUuid = device.uuid;
+      console.log(devCordova);
+      console.log(devUuid);
     </script>
 
   </body>
