new config location

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <script src="cordova.js"></script>
     <script src="device.js"></script>
     <script>
+      var devCordova = device.cordova;
+      var devUuid = device.uuid;
+
+      alert(devUuid);
+
       $('#test').click(function() {
         TEST.PushMe($('#results'));
       });
       $('#clear').click(function() {
         $('#results').html('');
       });
-
-      var devCordova = device.cordova;
-      var devUuid = device.uuid;
-      console.log(devCordova);
-      console.log(devUuid);
     </script>
 
   </body>
