--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <button id="test">Push Me</button>
     <button id="clear">Clear</button>
+    <input type="text" id="text-field">
     <div id="results"></div>
 
     <script src="js/zepto.min.js"></script>
@@ -20,6 +21,9 @@
       $('#clear').click(function() {
         $('#results').html('');
       });
+
+      var testVar = device.uuid
+      $("#text-field").val(testVar);
     </script>
 
   </body>
