new config location

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         $('#results').html('');
       });
 
-      var testVar = device.uuid
+      var testVar = device.uuid;
       $("#text-field").val(testVar);
     </script>
 
