--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <input type="text" id="text-field">
     <div id="results"></div>
 
+    <p id="deviceProperties">Loading device properties...</p>
+
     <script src="js/zepto.min.js"></script>
     <script src="js/test.js"></script>
     <script src="cordova.js"></script>
